; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/q68/extr_q68-jit.c_op_MUL.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/q68/extr_q68-jit.c_op_MUL.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@INSN_GET_REG = common dso_local global i32 0, align 4
@SIZE_W = common dso_local global i32 0, align 4
@current_entry = common dso_local global i32 0, align 4
@reg = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @op_MUL to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @op_MUL(i32* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %9 = load i32, i32* @INSN_GET_REG, align 4
  %10 = load i32, i32* %5, align 4
  %11 = and i32 %10, 256
  store i32 %11, i32* %6, align 4
  %12 = load i32*, i32** %4, align 8
  %13 = load i32, i32* %5, align 4
  %14 = load i32, i32* @SIZE_W, align 4
  %15 = call i32 @ea_get(i32* %12, i32 %13, i32 %14, i32 0, i32* %7, i32 1)
  %16 = load i32, i32* %7, align 4
  %17 = icmp slt i32 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %2
  store i32 1, i32* %3, align 4
  br label %50

19:                                               ; preds = %2
  %20 = load i32, i32* @current_entry, align 4
  %21 = load i32, i32* @reg, align 4
  %22 = mul nsw i32 %21, 4
  %23 = call i32 @JIT_EMIT_GET_OP2_REGISTER(i32 %20, i32 %22)
  %24 = load i32*, i32** %4, align 8
  %25 = load i32, i32* %5, align 4
  %26 = call i32 @cc_needed(i32* %24, i32 %25)
  store i32 %26, i32* %8, align 4
  %27 = load i32, i32* %6, align 4
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %32

29:                                               ; preds = %19
  %30 = load i32, i32* @current_entry, align 4
  %31 = call i32 @JIT_EMIT_MULS_W(i32 %30)
  br label %35

32:                                               ; preds = %19
  %33 = load i32, i32* @current_entry, align 4
  %34 = call i32 @JIT_EMIT_MULU_W(i32 %33)
  br label %35

35:                                               ; preds = %32, %29
  %36 = load i32, i32* %8, align 4
  %37 = icmp ne i32 %36, 0
  br i1 %37, label %38, label %41

38:                                               ; preds = %35
  %39 = load i32, i32* @current_entry, align 4
  %40 = call i32 @JIT_EMIT_SETCC_LOGIC_L(i32 %39)
  br label %41

41:                                               ; preds = %38, %35
  %42 = load i32, i32* @current_entry, align 4
  %43 = load i32, i32* @reg, align 4
  %44 = mul nsw i32 %43, 4
  %45 = call i32 @JIT_EMIT_SET_REGISTER_L(i32 %42, i32 %44)
  %46 = load i32, i32* @current_entry, align 4
  %47 = load i32, i32* %7, align 4
  %48 = add nsw i32 54, %47
  %49 = call i32 @JIT_EMIT_ADD_CYCLES(i32 %46, i32 %48)
  store i32 0, i32* %3, align 4
  br label %50

50:                                               ; preds = %41, %18
  %51 = load i32, i32* %3, align 4
  ret i32 %51
}

declare dso_local i32 @ea_get(i32*, i32, i32, i32, i32*, i32) #1

declare dso_local i32 @JIT_EMIT_GET_OP2_REGISTER(i32, i32) #1

declare dso_local i32 @cc_needed(i32*, i32) #1

declare dso_local i32 @JIT_EMIT_MULS_W(i32) #1

declare dso_local i32 @JIT_EMIT_MULU_W(i32) #1

declare dso_local i32 @JIT_EMIT_SETCC_LOGIC_L(i32) #1

declare dso_local i32 @JIT_EMIT_SET_REGISTER_L(i32, i32) #1

declare dso_local i32 @JIT_EMIT_ADD_CYCLES(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
